v1.0.5 - Dark Mode PDF Print Fix
Fixed printing the resume (PDF) in dark mode - the background of the PDF was dark, now it's white, as it should.

--- a/int_resources/scss/pdf.scss
+++ b/int_resources/scss/pdf.scss
@@ -905,6 +905,10 @@ body:not(.lang-design1, .lang-design2) .pdf-lang-elem :where(.pdf-lang-lvl-short
         backdrop-filter:none;
     }
 
+    .pdfc-inner{
+        background-color:#FFF;
+    }
+
     .pdfc-inner-inner{
         position:absolute;
         top:0;
